<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    style="@style/StockPhoneTheme">

	<ImageView
    	android:id="@+id/mgvAboutStockPhone"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingTop="10dp"
        android:src="@drawable/ic_stockphone_letter"/>

    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/StockPhoneTextTitleAppearance"
        android:text="@string/lblTitleDeveloper"/>
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
		style="@style/StockPhoneTextAppearance"
        android:text="@string/lblDeveloper"
        android:paddingRight="7dp"/>
    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <TextView 
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:paddingTop="5dp"
			style="@style/StockPhoneTextTitleAppearance"
        	android:text="@string/lblTitleContact"/>
    
    	<TextView 
        	android:layout_width="wrap_content"
       	 	android:layout_height="wrap_content"
        	android:paddingTop="5dp"
        	style="@style/StockPhoneTextAppearance"
       		android:text="@string/lblContact"
       		android:paddingRight="7dp"/>
        
    </LinearLayout>  
    	
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="7dp"
        style="@style/StockPhoneTextTitleAppearance"
        android:text="@string/lblTitleTechniqueSpecification"/>
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="5dp"
		style="@style/StockPhoneTextAppearance"
        android:text="@string/lblTechniqueSpecification"
        android:paddingRight="7dp"/>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">
            
            <LinearLayout 
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                
                <TextView 
       				android:layout_width="wrap_content"
        			android:layout_height="wrap_content"
        			android:paddingTop="5dp"
        			style="@style/StockPhoneTextTitleAppearance"
        			android:text="@string/lblSubTitleAndroidVersion"/>
                
                <TextView 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/StockPhoneTextAppearance"
                    android:text="@string/lblAndroidVersion"
                    android:paddingRight="7dp"/>
                
            </LinearLayout>           
    
    		<TextView 
        		android:layout_width="wrap_content"
        		android:layout_height="wrap_content"
        		android:paddingTop="5dp"
				style="@style/StockPhoneTextAppearance"
        		android:text="@string/lblAndroidVersionExplanation"
        		android:paddingRight="7dp"/>            
        </LinearLayout>
        
        <ImageView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/android_version"
            android:layout_weight="0"/>     
            
    </LinearLayout>
    
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
		style="@style/StockPhoneTextTitleAppearance"
		android:gravity="center_horizontal"
		android:paddingTop="5dp"
        android:text="@string/lblTitleStockPhoneUse" />
    
    <ScrollView 
        android:scrollbars="vertical"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:isScrollContainer="true">
        
    	<TextView
        	android:id="@+id/lblAboutStockPhone"
        	android:layout_width="fill_parent"
        	android:layout_height="wrap_content"
        	android:text="@string/lblStockPhoneUse" 
        	style="@style/StockPhoneTextAppearance"
       		android:paddingTop="5dp"
       		android:paddingRight="7dp"/>   
    </ScrollView>       
    
</LinearLayout>