<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    style="@style/StockPhoneTheme">

    <ImageView
    	android:id="@+id/mgLogin"
    	android:paddingTop="20dp"
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:src="@drawable/ic_stockphone_letter" />    

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblUser"
        style="@style/StockPhoneTextAppearance"/>

    <EditText
        android:id="@+id/txtUser"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:singleLine="true" >
    </EditText>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/lblPassword"
        style="@style/StockPhoneTextAppearance"/>

    <EditText
        android:id="@+id/txtPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:singleLine="true" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:layout_weight="0"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btnOk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="btnOkSetOnClickListener"
            android:text="@string/btnOk" />

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="btnCancelSetOnClickListener"
            android:text="@string/btnCancel" />
    </LinearLayout>

    <TextView
        android:id="@+id/lblErrorlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        style="@style/StockPhoneTextPasswordAppearance"/>

</LinearLayout>