<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" 
    style="@style/StockPhoneTheme">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lblOrderRequisition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/lblOrder" 
            style="@style/StockPhoneTextTitleAppearance"/>

        <TextView
            android:id="@+id/lblOrderRequisitionValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="7dp"
            android:text=""
            style="@style/StockPhoneTextAppearance"/>

        <TextView
            android:id="@+id/lblFilterRequsition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/lblFilter"
            style="@style/StockPhoneTextTitleAppearance" />

        <TextView
            android:id="@+id/lblFilterRequsitionValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingRight="7dp"
            android:text="" 
            style="@style/StockPhoneTextAppearance"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/txtSerchRequsitionArticle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_menu_stock"
            android:gravity="fill_horizontal"
            android:singleLine="true"
            android:hint="@string/lblSerchArticle" >
        </EditText>
    </LinearLayout>

    <ListView
        android:id="@+id/lstvRequsitionArticle"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        style="@style/ListView">
    </ListView>
    
    <ImageView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:src="@drawable/ic_stockphone_letter"/>

</LinearLayout>